modified icon margin left for navs

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             </li>
             <!-- BUTTON LINK -->
             <li>
-              <a id="login" class="btn waves-effect waves-light">Login</a>
+              <a id="login" class="btn btn-small waves-effect waves-light">Login</a>
             </li>
             <!-- ICON LINK -->
             <li>
               <a href="#" class=" black-text" id="avatar">
-                <i class="material-icons">person</i>
+                <i class="material-icons tiny">person</i>
               </a>
             </li>
           </ul>
@@ -117,7 +117,7 @@
                       <a href="#">Business Cards</a>
                     </li>
                     <li>
-                      <a href="#">Post Cards</a>
+                      <a href="#">Postcards</a>
                     </li>
                     <li>
                       <a href="#">Flyers</a>
@@ -183,7 +183,7 @@
             </ul>
             <!-- BUTTON LINK -->
             <li>
-              <a id="login" class="btn waves-effect waves-light">Login</a>
+              <a id="login" class="btn btn-small waves-effect waves-light">Login</a>
             </li>
             <!-- ICON LINK -->
             <li>
@@ -230,7 +230,7 @@
         <a href="#">Business Cards</a>
       </li>
       <li>
-        <a href="#">Post Cards</a>
+        <a href="#">Postcards</a>
       </li>
       <li>
         <a href="#">Flyers</a>
