reduced bulletpoints on cards

--- a/index.html
+++ b/index.html
@@ -354,13 +354,9 @@
             
             <ul>
               <li>Banners</li>
-              <li>Magnets</li>
-              <li>Decals</li>
               <li>Vehicle Wraps</li>
               <li>Window Perf</li>
-              <li>Displays</li>
-              <li>Signage</li>
-              <li>Posters</li>
+              <li>and more...</li>
             </ul>
           </div>
           <div class="card-action amber darken-3">
@@ -381,8 +377,7 @@
               <li>Business Cards</li>
               <li>Postcards</li>
               <li>Flyers</li>
-              <li>Invitations</li>
-              <li>Menus</li>
+              <li>and more...</li>
             </ul>
           </div>
           <div class="card-action amber darken-3">
@@ -403,12 +398,7 @@
               <li>Silk Screening</li>
               <li>Embroidery</li>
               <li>Vinyl</li>
-              <li>Hats</li>
-              <li>Shirts</li>
-              <li>Aprons</li>
-              <li>Sweaters</li>
-              <li>Badges</li>
-              <li>Jackets</li>
+              <li>and more...</li>
             </ul>
           </div>
           <div class="card-action amber darken-3">
@@ -429,9 +419,7 @@
               <li>Static Websites</li>
               <li>Dynamic Websites</li>
               <li>E-commerce Sites</li>
-              <li>Restaurants</li>
-              <li>Blog Sites</li>
-              <li>Applications</li>
+              <li>and more...</li>
             </ul>
           </div>
           <div class="card-action amber darken-3">
