reduced bulletpoints on cards

--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
           <div class="card-content">
             
             <ul>
-              <li>Static Websites</li>
-              <li>Dynamic Websites</li>
-              <li>E-commerce Sites</li>
+              <li>Static Sites</li>
+              <li>Dynamic Sites</li>
+              <li>E-commerce</li>
               <li>and more...</li>
             </ul>
           </div>
