center aligned hero banner

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
 
     <section class="home-hero row">
-      <div class="valign-wrapper">
+      <div class="center-align wrapper">
           <img class="responsive-img" src="img/HUP web banner OFFSET.jpg" />
         <!-- <img
           class="responsive-img"
